--- a/conf/cassandra.yaml
+++ b/conf/cassandra.yaml
@@ -63,11 +63,6 @@ hinted_handoff_enabled: true
 # created until it has been seen alive and gone down again.
 max_hint_window: 3h
 
-# The file size limit to store hints for an unreachable host.
-# Once the local hints files have reached the limit, no more new hints will be created.
-# Set a non-positive value will disable the size limit.
-max_hints_size_per_host_in_mb: 0
-
 # Maximum throttle in KBs per second, per delivery thread.  This will be
 # reduced proportionally to the number of nodes in the cluster.  (If there
 # are two nodes in the cluster, each delivery thread will use the maximum
@@ -90,6 +85,11 @@ hints_flush_period: 10000ms
 
 # Maximum size for a single hints file, in megabytes.
 max_hints_file_size: 128MiB
+
+# The file size limit to store hints for an unreachable host, in megabytes.
+# Once the local hints files have reached the limit, no more new hints will be created.
+# Set a non-positive value will disable the size limit.
+# max_hints_size_per_host: 0MiB
 
 # Enable / disable automatic cleanup for the expired and orphaned hints file.
 # Disable the option in order to preserve those hints on the disk.
