--- a/conf/cassandra.yaml
+++ b/conf/cassandra.yaml
@@ -1616,3 +1616,8 @@ drop_compact_storage_enabled: false
 # Guardrail to allow/disallow list operations that require read before write, i.e. setting list element by index and
 # removing list elements by either index or value. Defaults to true.
 # read_before_write_list_operations_enabled: true
+# Guardrail to warn or abort when a client issued SELECT statement has more partition keys in the IN clause than threshold.
+# The two thresholds default to -1 to disable.
+#     partition_keys_in_select:
+#         warn_threshold: -1
+#         abort_threshold: -1
